--- a/index.html
+++ b/index.html
@@ -369,6 +369,9 @@
           Os pasaremos el link del discord para poder comunicarse con los otros clanes y que nos pasen el link del jugador que transmitira
           el partido.
         </p>
+        <p>
+          cualquier duda o sugerencia enviar correo a ligadeclanesspn@gmail.com
+        </p>
       </div>
     </div>
     
