--- a/clanes/gdny.html
+++ b/clanes/gdny.html
@@ -82,24 +82,26 @@
                       <a href="https://www.twitch.tv/danikueyar365" target="_blank"class="btn btn-primary btn-sm">Twitch</a>
                     </td>
                   </tr>
-                  <tr>
+                      <tr>
                     <th scope="row">5</th>
+                    <td>Bysoni1990</td>
+                    <td><a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Bysoni1990%238936990/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td>
+                        <a href="https://www.twitch.tv/bysoni1990" target="_blank" class="btn btn-primary btn-sm">Twitch</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">6</th>
                     <td>Morales98</td>
                     <td>
                       <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/morales98%232340245/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
                     </td>
                     <td></td>
                   </tr>
+                
                   <tr>
-                    <th scope="row">5</th>
-                    <td>Bysoni1990</td>
-                    <td><a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Bysoni1990%238936990/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
-                    </td>
-                    <td>
-                    </td>
-                  </tr>
-                  <tr>
-                    <th scope="row">6</th>
+                    <th scope="row">7</th>
                     <td>Lycanwolf192</td>
                     <td>
                       <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Lycanwolf192%232942982/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
@@ -108,7 +110,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <th scope="row">7</th>
+                    <th scope="row">8</th>
                     <td>JoseliNho91</td>
                     <td>
                       <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/JoseliNho91%238064286/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
@@ -133,7 +135,7 @@
                     <td></td>
                   </tr>
                   <tr>
-                    <th scope="row">10</th>
+                    <th scope="row">11</th>
                     <td>DarkGab11</td>
                     <td>
                       <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/DarkGab11%236566271/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
