--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               </p>
               <p>
                 Esos 4 miembros solo podrán jugar cuando no lleguen a seis jugadores para el partido que se vaya a disputar.
-                Dichos jugadores si pueden ser parte de otros clanes que esten en la liga.
+                Dichos jugadores NO pueden ser parte de otros clanes que esten en la liga.
               </p>
             </div>
           </div>
