--- a/clanes/gdny.html
+++ b/clanes/gdny.html
@@ -55,7 +55,7 @@
                     <th scope="row">2</th>
                     <td>ImCarlosCm</td>
                     <td>
-                      <a href=""target="_blank" class="btn btn-outline-secondary btn-sm">N/A</a>
+                      <a href="" class="btn btn-outline-secondary btn-sm">N/A</a>
                     </td>
                     <td>
                       <a href="https://www.twitch.tv/imcarloscm" target="_blank"class="btn btn-primary btn-sm">Twitch</a>
@@ -82,24 +82,22 @@
                       <a href="https://www.twitch.tv/danikueyar365" target="_blank"class="btn btn-primary btn-sm">Twitch</a>
                     </td>
                   </tr>
-                      <tr>
-                    <th scope="row">5</th>
-                    <td>Bysoni1990</td>
-                    <td><a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Bysoni1990%238936990/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
-                    </td>
-                    <td>
-                        <a href="https://www.twitch.tv/bysoni1990" target="_blank" class="btn btn-primary btn-sm">Twitch</a>
-                    </td>
-                  </tr>
                   <tr>
-                    <th scope="row">6</th>
+                    <th scope="row">5</th>
                     <td>Morales98</td>
                     <td>
                       <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/morales98%232340245/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
                     </td>
                     <td></td>
                   </tr>
-                
+                  <tr>
+                    <th scope="row">6</th>
+                    <td>Bysoni1990</td>
+                    <td><a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Bysoni1990%238936990/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td>
+                    </td>
+                  </tr>
                   <tr>
                     <th scope="row">7</th>
                     <td>Lycanwolf192</td>
