--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               </p>
               <p>
                 Esos 4 miembros solo podrán jugar cuando no lleguen a seis jugadores para el partido que se vaya a disputar.
-                Dichos jugadores NO pueden ser parte de otros clanes que esten en la liga.
+                Dichos jugadores si pueden ser parte de otros clanes que esten en la liga.
               </p>
             </div>
           </div>
@@ -368,9 +368,6 @@
         <p>
           Os pasaremos el link del discord para poder comunicarse con los otros clanes y que nos pasen el link del jugador que transmitira
           el partido.
-        </p>
-        <p>
-          cualquier duda o sugerencia enviar correo a ligadeclanesspn@gmail.com
         </p>
       </div>
     </div>
