--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -33,13 +33,16 @@
               </a>   
           </div>
           <div class="col-md-3">
-            <img src="img/gdny.jpg" alt="" style="width: 100%;">
+            <a href="gufu/gufu.html">
+              <img src="gufu/clan.png" alt="" style="width: 100%;">
+            </a>
+            
         </div>
         <div class="col-md-3">
-          <img src="img/gdny.jpg" alt="" style="width: 100%;">
+          <img src="" alt="" style="width: 100%;">
       </div>
       <div class="col-md-3">
-        <img src="img/gdny.jpg" alt="" style="width: 100%;">
+        <img src="" alt="" style="width: 100%;">
     </div>
         </div>
       </div>
