--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -34,7 +34,7 @@
           </div>
           <div class="col-md-3">
             <a href="gufu/gufu.html">
-              <img src="gufu/clan.png" alt="" style="width: 100%;">
+              <img src="gufu/Clan.png" alt="" style="width: 100%;">
             </a>
             
         </div>
