--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -39,7 +39,10 @@
             
         </div>
         <div class="col-md-3">
-          <img src="" alt="" style="width: 100%;">
+          <a href="TBC/tbc.html">
+            <img src="TBC/Clan.jpg" alt="" style="width: 100%;">
+          </a>
+          
       </div>
       <div class="col-md-3">
         <img src="" alt="" style="width: 100%;">
