--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -24,31 +24,54 @@
     <link rel="stylesheet" href="../versusclanes.css" type="text/css" />
   </head>
   <body>
-
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-md-3">
-              <a href="gdny.html">
-                <img src="img/gdny.jpg"  alt="" style="width: 100%;">
-              </a>   
-          </div>
-          <div class="col-md-3">
-            <a href="gufu/gufu.html">
-              <img src="gufu/Clan.png" alt="" style="width: 100%;">
-            </a>
-            
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-3">
+          <a href="gdny.html">
+            <img src="img/gdny.jpg" alt="" style="width: 100%" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="gufu/gufu.html">
+            <img src="gufu/Clan.png" alt="" style="width: 100%" />
+          </a>
         </div>
         <div class="col-md-3">
           <a href="TBC/tbc.html">
-            <img src="TBC/Clan.jpg" alt="" style="width: 100%;">
+            <img src="TBC/Clan.jpg" alt="" style="width: 100%" />
           </a>
-          
-      </div>
-      <div class="col-md-3">
-        <img src="" alt="" style="width: 100%;">
-    </div>
+        </div>
+        <div class="col-md-3">
+          <a href="hdes/hdes.html">
+            <img src="hdes/Clan.png" alt="" style="width: 100%" />
+          </a>
         </div>
       </div>
+    </div>
 
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-3">
+          <a href="VIP/vip.html">
+            <img src="VIP/Clan.jpg" alt="" style="width: 100%" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="">
+            <img src="" alt="" style="width: 100%" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="">
+            <img src="" alt="" style="width: 100%" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="">
+            <img src="" alt="" style="width: 100%" />
+          </a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
