--- a/index.html
+++ b/index.html
@@ -306,24 +306,24 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md-3">
-            <img src="img/Hackney-Yard.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">Hackney yard - Dominio</h1>
-          </div>
-          <div class="col-md-3">
-            <img src="img/St-Petrograd.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">St. Petrograd - Punto caliente</h1>
-          </div>
-          <div class="col-md-3">
-            <img src="img/Piccadilly.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">Picadilly - Buscar y destruir.</h1>
-          </div>
-          <div class="col-md-3">
             <img src="img/Gun-Runner.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">Gun Runner - Punto Caliente</h1>
+            <h1 class="h5">Gun Runner - Dominio</h1>
           </div>
           <div class="col-md-3">
             <img src="img/Rammaza.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">Rammaza - Buscar y destruir</h1>
+            <h1 class="h5">Rammaza - Punto caliente</h1>
+          </div>
+          <div class="col-md-3">
+            <img src="img/Arklov-Peak.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">Arklov Peak - Buscar y destruir.</h1>
+          </div>
+          <div class="col-md-3">
+            <img src="img/Hackney-Yard.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">Hackney Yard - Punto Caliente</h1>
+          </div>
+          <div class="col-md-3">
+            <img src="img/St-Petrograd.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">St. Petrograd - Dominio</h1>
           </div>
         </div>
       </div>
