--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -57,8 +57,8 @@
           </a>
         </div>
         <div class="col-md-3">
-          <a href="">
-            <img src="" alt="" style="width: 100%" />
+          <a href="SK/sk.html">
+            <img src="SK/Clan.jpg" alt="" style="width: 100%" />
           </a>
         </div>
         <div class="col-md-3">
