--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -62,8 +62,34 @@
           </a>
         </div>
         <div class="col-md-3">
+          <a href="DS/ds.html">
+            <img src="DS/Clan.jpg" alt="" style="width: 100%" height="80%" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="SHUB/shub.html">
+            <img src="SHUB/Clan.jpg" alt="" style="width: 100%" />
+          </a>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-3">
+          <a href="nikolo/nikolo.html">
+            <img src="nikolo/Clan.png" alt="" style="width: 100%" />
+          </a>
+        </div>
+        <div class="col-md-3">
           <a href="">
             <img src="" alt="" style="width: 100%" />
+          </a>
+        </div>
+        <div class="col-md-3">
+          <a href="">
+            <img src="" alt="" style="width: 100%"  />
           </a>
         </div>
         <div class="col-md-3">
