--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -32,8 +32,8 @@
           </a>
         </div>
         <div class="col-md-3">
-          <a href="gufu/gufu.html">
-            <img src="gufu/Clan.png" alt="" style="width: 100%" />
+          <a href="nikolo/nikolo.html">
+            <img src="nikolo/Clan.png" alt="" style="width: 100%" />
           </a>
         </div>
         <div class="col-md-3">
@@ -78,8 +78,8 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-3">
-          <a href="nikolo/nikolo.html">
-            <img src="nikolo/Clan.png" alt="" style="width: 100%" />
+          <a href="">
+            <img src="" alt="" style="width: 100%" />
           </a>
         </div>
         <div class="col-md-3">
