--- a/reglas.html
+++ b/reglas.html
@@ -106,7 +106,8 @@
               <h2>Accesorios Baneados</h2>
               <p>-CDL automaticamente banea los accesorios entre ellos, lasers y silenciadores.</p>
               <h2>Restricciones</h2>
-              <p>-Los humos tendra restricciones ya que solo 2 jugadores podran llevarlos por equipo en cada modo de juego del torneo(byd,punto caliente y dominio) sin limite de trophis </p>
+              <p>-Los humos tendra restricciones ya que solo 2 jugadores podran llevarlos en Buscar y destruir, los demas modos el humo esta baneado. </p>
+                <p>-Trophis y silencio mortal no tienen restricciones.</p>
               <h2>En caso de desconeccion</h2>
         <p>
           -Si un jugador no host se desconecta de un mapa de buscar y destruir, la ronda continuara. Antes del comienzo 
