--- a/reglas.html
+++ b/reglas.html
@@ -33,7 +33,7 @@
         <h2>Jugadores</h2>
     <p>-Cada clan será establecido por un máximo de 20 personas teniendo a 4 reservas que no sean de dicho clan, ya pueden ser amigos, conocidos con los que juegan, los miembros del clan solo pueden jugar con ese clan no esta permitido que un jugador pueda jugar en 2 clanes a la vez.</p>
     
-    <p>-Esos 4 miembros solo podrán jugar cuando no lleguen a seis jugadores para el partido que se vaya a disputar. Dichos jugadores si pueden ser parte de otros clanes que esten en la liga.</p>
+    <p>-Esos 4 miembros solo podrán jugar cuando no lleguen a seis jugadores para el partido que se vaya a disputar. Dichos jugadores NO pueden ser parte de otros clanes que esten en la liga.</p>
     <p>-Se podran hacer fichajes a mitad de la liga y no de equipos que participen en ella a no ser que a los dos equipos les parezca correcto</p>
         <h2>Partida</h2>
         <p>
