--- a/reglas.html
+++ b/reglas.html
@@ -53,7 +53,7 @@
             
           </p>
           <h2 >Creacion de las partidas</h2>
-            <p>-La partida siempre sera en servidor dedicado sin importar el host</p>
+            <p>-La partida siempre sera en servidor dedicado.</p>
             <p>-El modo de juego siempre sera CDL (Call of duty league)</p>
               <p>
                 - un equipo hosteara 3 partidos y el otro 2, el equipo que hostee 3 partidos sera el que esta mas abajo en el marcador global.
