--- a/clanes/clanes.html
+++ b/clanes/clanes.html
@@ -78,23 +78,23 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-3">
-          <a href="">
-            <img src="" alt="" style="width: 100%" />
+          <a href="Rio/rio.html">
+            <img src="Rio/Clan.png" alt="" style="width: 100%" />
           </a>
         </div>
         <div class="col-md-3">
-          <a href="">
-            <img src="" alt="" style="width: 100%" />
+          <a href="WildDogs/WildDogs.html">
+            <img src="WildDogs/Clan.jpg" alt="" style="width: 100%" />
           </a>
         </div>
         <div class="col-md-3">
-          <a href="">
-            <img src="" alt="" style="width: 100%"  />
+          <a href="Panthers/panthers.html">
+            <img src="Panthers/Clan.jpg" alt="" style="width: 100%"  />
           </a>
         </div>
         <div class="col-md-3">
-          <a href="">
-            <img src="" alt="" style="width: 100%" />
+          <a href="WRZ/wrz.html">
+            <img src="WRZ/Clan.jpg" alt="" style="width: 100%" />
           </a>
         </div>
       </div>
