--- a/reglas.html
+++ b/reglas.html
@@ -33,7 +33,7 @@
         <h2>Jugadores</h2>
     <p>-Cada clan será establecido por un máximo de 20 personas teniendo a 4 reservas que no sean de dicho clan, ya pueden ser amigos, conocidos con los que juegan, los miembros del clan solo pueden jugar con ese clan no esta permitido que un jugador pueda jugar en 2 clanes a la vez.</p>
     
-    <p>-Esos 4 miembros solo podrán jugar cuando no lleguen a seis jugadores para el partido que se vaya a disputar. Dichos jugadores NO pueden ser parte de otros clanes que esten en la liga.</p>
+    <p>-Esos 4 miembros solo podrán jugar cuando no lleguen a seis jugadores para el partido que se vaya a disputar. Dichos jugadores si pueden ser parte de otros clanes que esten en la liga.</p>
     <p>-Se podran hacer fichajes a mitad de la liga y no de equipos que participen en ella a no ser que a los dos equipos les parezca correcto</p>
         <h2>Partida</h2>
         <p>
@@ -53,7 +53,7 @@
             
           </p>
           <h2 >Creacion de las partidas</h2>
-            <p>-La partida siempre sera en servidor dedicado.</p>
+            <p>-La partida siempre sera en servidor dedicado sin importar el host</p>
             <p>-El modo de juego siempre sera CDL (Call of duty league)</p>
               <p>
                 - un equipo hosteara 3 partidos y el otro 2, el equipo que hostee 3 partidos sera el que esta mas abajo en el marcador global.
@@ -106,8 +106,7 @@
               <h2>Accesorios Baneados</h2>
               <p>-CDL automaticamente banea los accesorios entre ellos, lasers y silenciadores.</p>
               <h2>Restricciones</h2>
-              <p>-Los humos tendra restricciones ya que solo 2 jugadores podran llevarlos en Buscar y destruir, los demas modos el humo esta baneado. </p>
-                <p>-Trophis y silencio mortal no tienen restricciones.</p>
+              <p>-Los humos tendra restricciones ya que solo 2 jugadores podran llevarlos por equipo en cada modo de juego del torneo(byd,punto caliente y dominio) sin limite de trophis </p>
               <h2>En caso de desconeccion</h2>
         <p>
           -Si un jugador no host se desconecta de un mapa de buscar y destruir, la ronda continuara. Antes del comienzo 
