--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <h1 class="h2">La liga</h1>
               <p>
                La liga iniciara el lunes 7 de septiembre, el domingo 6 se hara el sorteo en vivo de como quedaran los versus.
-                Os avisaremos por el discord de la liga. <a>https://discord.gg/pgPEfj </a>
+                Os avisaremos por el discord de la liga. <a href="https://discord.gg/pgPEfj"target="_blank" >"Click Aqui"</a>
               </p>
               <p>
                 
