--- a/clanes/SHUB/shub.html
+++ b/clanes/SHUB/shub.html
@@ -174,6 +174,14 @@
                     </td>
                     <td></td>
                   </tr>
+                  <tr>
+                    <th scope="row">16</th>
+                    <td>Exyzer-_ </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/psn/Exyzer-_/mp" target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
                 </tbody>
               </table>
         </div>
