--- a/clanes/TBC/tbc.html
+++ b/clanes/TBC/tbc.html
@@ -144,6 +144,15 @@
                     </td>
                     <td></td>
                   </tr>
+                  <tr>
+                    <th scope="row">12</th>
+                    <td>xX-pSiCoPaTa-Xx#9074669  </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/xX-pSiCoPaTa-Xx%239074669/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  
                   
                 </tbody>
               </table>
