--- a/clanes/Rio/rio.html
+++ b/clanes/Rio/rio.html
@@ -115,6 +115,22 @@
                     </td>
                     <td></td>
                   </tr>
+                  <tr>
+                    <th scope="row">9</th>
+                    <td>Ainkanaro3 </td>
+                    <td>
+                      <a href=""class="btn btn-outline-secondary btn-sm">N/A</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">10</th>
+                    <td>Twitch_LadySara </td>
+                    <td>
+                      <a href=""class="btn btn-outline-secondary btn-sm">N/A</a>
+                    </td>
+                    <td></td>
+                  </tr>
                   
                  
                 </tbody>
