--- a/index.html
+++ b/index.html
@@ -222,32 +222,47 @@
     </section>
 
     <div class="container">
-      <p class="h3">Mapas de esta semana</p>
+      <p class="h3">Mapas semana 7-13</p>
     </div>
 
     <div id="mapas-img">
       <div class="container mt-5">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <img src="img/Gun-Runner.jpg" alt="" style="width: 100%;" />
             <h1 class="h5">Gun Runner - Dominio</h1>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <img src="img/Rammaza.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">Rammaza - Punto caliente</h1>
+            <h1 class="h5"> Ramaza- Punto caliente</h1>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <img src="img/Arklov-Peak.jpg" alt="" style="width: 100%;" />
             <h1 class="h5">Arklov Peak - Buscar y destruir.</h1>
           </div>
-          <div class="col-md-3">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <p class="h3">Mapas semana 14-20</p>
+    </div>
+
+    <div id="mapas-img">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-4">
             <img src="img/Hackney-Yard.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">Hackney Yard - Punto Caliente</h1>
+            <h1 class="h5">Hackney Yard - Dominio</h1>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <img src="img/St-Petrograd.jpg" alt="" style="width: 100%;" />
-            <h1 class="h5">St. Petrograd - Dominio</h1>
+            <h1 class="h5">St. Petrograd  - Punto caliente</h1>
           </div>
+          <div class="col-md-4">
+            <img src="img/Piccadilly.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">Piccadilly - Buscar y destruir.</h1>
+          </div>
+         
         </div>
       </div>
     </div>
