--- a/reglas.html
+++ b/reglas.html
@@ -79,8 +79,8 @@
                 -Tendran que revisar la pagina para ver los mapas que se disputan en esa semana ya que varian de una semana a otra.
               </p>
               <h2>Puntuacion</h2>
-              <p>-Las partidas seran de tipo "El mejor de 3", cuando se llegue a 3 partidas ganadas por cualquier clan se terminara el encuentro.</p>
-              <p>-La puntuacion es 1 punto por partido ganado.</p>
+              <p>-Solo se jugaran 3 mapas, cada mapa ganado es 1 punto.</p>
+              
               <h2>Incidencias</h2>
               <p>-Cualquier tipo de incidencia en el partido tendra que ser grabada para que un admin la revise y tome las medidas correspondiente</p>
 
