--- a/index.html
+++ b/index.html
@@ -54,14 +54,9 @@
               <a class="nav-link" href="clanes/clanes.html">CLANES</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link disabled"
-                href=""
-                tabindex="-1"
-                aria-disabled="true"
-                >MARCADOR</a
-              >
+              <a class="nav-link" href="marcador.html">CLASIFICACION</a>
             </li>
+            
             <li class="nav-item">
               <a class="nav-link" href="bracket.html">TORNEO PROXIMO</a>
             </li>
@@ -220,8 +215,8 @@
         </div>
       </div>
     </section>
-
-    <div class="container">
+<!--
+  <div class="container">
       <p class="h3">Mapas semana 7-13</p>
     </div>
 
@@ -243,6 +238,9 @@
         </div>
       </div>
     </div>
+-->
+    
+
     <div class="container">
       <p class="h3">Mapas semana 14-20</p>
     </div>
