--- a/marcador.html
+++ b/marcador.html
@@ -24,6 +24,15 @@
         <link rel="stylesheet" href="versusclanes.css" type="text/css" />
     </head>
    
-    <h1>Aca ira el marcador</h1>
+    
+    <BODY>
+      <div id="marcador">
+        <div class="container">
+          <div class="mt-5">
+            <img src="img/marcador.jpg" alt="clasificacion">
+          </div>    
+        </div>
+      </div>
+    </BODY>
 </html>
 
