--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
           Aca os dejaremos con las noticias de la liga y demas.
         </p>
         <p>
-          Os pasaremos el link del discord para poder comunicarse con los otros clanes y que nos pasen el link del jugador que transmitira
-          el partido.
+          2 Clanes han abandonado la liga, Niloko y Sk-Kw y el clan Panthers ha sido descalificado por no contestar.
         </p>
       </div>
     </div>
