--- a/clanes/Rio/rio.html
+++ b/clanes/Rio/rio.html
@@ -131,7 +131,46 @@
                     </td>
                     <td></td>
                   </tr>
-                  
+                  <tr>
+                    <th scope="row">11</th>
+                    <td>ESCOFI </td>
+                    <td>
+                      <a href=""class="btn btn-outline-secondary btn-sm">N/A</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">12</th>
+                    <td>Aparta_hippie </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Aparta_hippie%231349510/mp" target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">13</th>
+                    <td>Jhandita </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/Jhandita%232699104/mp" target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">14</th>
+                    <td>FoNNNsito </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/FoNNNsito%239802132/mp" target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">15</th>
+                    <td>RUBEN_BLADES16 </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/RUBEN_BLADES16%231750965/mp" target="_blank"   class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
                  
                 </tbody>
               </table>
