--- a/clanes/TBC/tbc.html
+++ b/clanes/TBC/tbc.html
@@ -152,6 +152,30 @@
                     </td>
                     <td></td>
                   </tr>
+                  <tr>
+                    <th scope="row">13</th>
+                    <td>mathuersito_kill </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/mathuersito_kill%231592782/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">14</th>
+                    <td>jorgiito  </td>
+                    <td>
+                      <a href=""target="" class="btn btn-outline-secondary btn-sm">N/A</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">15</th>
+                    <td>alejandroxx-_-  </td>
+                    <td>
+                      <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/alejandroxx-_-%236550246/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
+                    </td>
+                    <td></td>
+                  </tr>
                   
                   
                 </tbody>
