--- a/clanes/gdny.html
+++ b/clanes/gdny.html
@@ -122,7 +122,9 @@
                     <td>
                       <a href="https://cod.tracker.gg/modern-warfare/profile/atvi/ferozxx14%237396027/mp"target="_blank" class="btn btn-outline-secondary btn-sm">ver</a>
                     </td>
-                    <td></td>
+                    <td>
+                      <a href="https://www.twitch.tv/ferozxx14" target="_blank"class="btn btn-primary btn-sm">Twitch</a>
+                    </td>
                   </tr>
                   <tr>
                     <th scope="row">10</th>
