--- a/clanes/Rio/rio.html
+++ b/clanes/Rio/rio.html
@@ -171,6 +171,15 @@
                     </td>
                     <td></td>
                   </tr>
+                  <tr>
+                    <th scope="row">16</th>
+                    <td>pabloescobar </td>
+                    <td>
+                      <a href="" target=""   class="btn btn-outline-secondary btn-sm">N/A</a>
+                    </td>
+                    <td></td>
+                  </tr>
+                 
                  
                 </tbody>
               </table>
