--- a/index.html
+++ b/index.html
@@ -321,7 +321,6 @@
     </div>
 
 
-   --> 
     <div class="container">
       <p class="h3">Mapas semana 5-11</p>
     </div>
@@ -346,6 +345,31 @@
       </div>
     </div>
 
+   --> 
+    
+    <div class="container">
+      <p class="h3">Mapas semana 5-11</p>
+    </div>
+
+    <div id="mapas-img">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="img/Hackney-Yard.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">Hackney-Yard - Punto Caliente</h1>
+          </div>
+          <div class="col-md-4">
+            <img src="img/Gun-Runner.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">Gun Runner  - Dominio</h1>
+          </div>
+          <div class="col-md-4">
+            <img src="img/St-Petrograd.jpg" alt="" style="width: 100%;" />
+            <h1 class="h5">St. Petrograd - Buscar y destruir.</h1>
+          </div>
+         
+        </div>
+      </div>
+    </div>
    
 
     <div id="desconeccion">
