--- a/marcador.html
+++ b/marcador.html
@@ -29,7 +29,7 @@
       <div id="marcador">
         <div class="container">
           <div class="mt-5">
-            <img src="img/marcador.png" alt="clasificacion" width="1000px">
+            <img src="img/marcador.PNG" alt="clasificacion" width="1000px">
           </div>    
         </div>
       </div>
